# Netrium

./: Setup.hs  generate-docs.hs  license.txt  netrium-demo.cabal  netrium.cabal  readme.markdown  regression-test.sh
doc/: Calendar.html  CalendarTest.html  Common.html  Contract.html  Credit.html  Observable.html  Options.html  Pricing.html  Swaps.html  doc-index-37.html  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Y.html  doc-index-Z.html  doc-index.html  index-frames.html  index.html  mini_Calendar.html  (+8 more)
examples/: BasketOption.contract  ChooserRangeAccrual.contract  ChooserRangeAccrual.hs  Common.hs  CreditDefaultSwap.contract  CreditDefaultSwap.obsdb.xml  DarkSpreadOption.contract  DarkSpreadOption.obsdb.xml  DarkSpreadOption.timeseries.xml  DarkSpreadOptionTemplate.hs  DemoContractAST.hi  DemoContractAST.hs  DirtySparkSpreadOption.hs  FXBarrierOption.contract  FXBarrierOption.obsdb.xml  ForwardTrade1.contract  ForwardTrade1.obsdb.xml  ForwardTrade1.timeseries.xml  ForwardTrade2.contract  GasSwing.contract  GasSwing.timeseries.xml  IndexAmortisingSwap.contract  IndexAmortisingSwap.timeseries.xml  JulienExample.hs  Observables.obsdb.xml  OilSwapTrade.contract  OilSwapTrade.obsdb.xml  OilSwapTrade.timeseries.xml  Option.contract  Option.obsdb.xml  Option.timeseries.xml  Product1.contract  SparkSpreadOption.contract  SparkSpreadOption.obsdb.xml  SparkSpreadOption.timeseries.xml  Test.contract  Test.obsdb.xml  Test.timeseries.xml  Units.db.xml  VarianceSwap.contract  (+4 more)
share/: Calendar.hi  Calendar.hs  Common.hi  Common.hs  Credit.hs  Options.hs  Pricing.hs  ScheduledProduct.hs  Settlement.hs  Swaps.hs  normalise-wrapper.hs
src/: Contract.hs  DecisionTree.hs  DecisionTreeSimplify.hs  Display.hs  Interpreter.hs  Observable.hs  ObservableDB.hs  Observations.hs  UnitsDB.hs  Valuation.hs  WriteDotGraph.hs  XmlUtils.hs
tool/: Normalise.hs  Simulate.hs  Visualise.hs
