name:               netrium
version:            0.6.0
synopsis:           Contract normaliser and simulator
description:        Netrium enables financial engineers to precisely describe and execute both simple and exotic contracts with both financial and physical delivery.
category:           Finance
author:             Well-Typed LLP
maintainer:         Well-Typed LLP
copyright:          2009-2015 Anthony Waite, Dave Hewett, Shaun Laurens and other contributors
license:            MIT
license-file:       license.txt

build-type:         Simple
cabal-version:      >= 1.8

data-dir:           share
data-files:         normalise-wrapper.hs
                    Common.hs
                    Options.hs
                    Calendar.hs
                    Swaps.hs
                    Credit.hs
                    Settlement.hs
		    ScheduledProduct.hs
extra-source-files: examples/Units.db.xml
                    examples/*.hs
                    examples/*.contract
                    examples/*.obsdb.xml
                    examples/*.timeseries.xml
                    regression-test.sh
                    generate-docs.hs

library
  hs-source-dirs:   src
  exposed-modules:  WriteDotGraph
                    Display
                    Observable
                    ObservableDB
                    UnitsDB
                    Observations
                    Contract
                    DecisionTree
                    DecisionTreeSimplify
                    Interpreter
                    XmlUtils
                    Valuation
  build-depends:    base       >= 3.0 && < 5,
                    containers >= 0.3 && < 1,
                    process    >= 1.0 && < 2,
                    time       >= 1.1 && < 2,
                    HaXml      == 1.25.*

executable normalise
  hs-source-dirs:   tool
  main-is:          Normalise.hs
  build-depends:    netrium,
                    base       >= 3.0 && < 5,
                    process    >= 1.0 && < 2,
                    filepath   >= 1.1 && < 2,
                    directory  >= 1.0 && < 2,
                    HaXml      == 1.25.*

executable simulate
  hs-source-dirs:   tool
  main-is:          Simulate.hs
  build-depends:    netrium,
                    base       >= 3.0 && < 5,
                    containers >= 0.3 && < 1,
                    HaXml      == 1.25.*,
                    pretty     == 1.1.3.*,
                    directory  >= 1.0 && < 2,
                    filepath

executable visualise
  hs-source-dirs:   tool
  main-is:          Visualise.hs
  build-depends:    netrium,
                    base       >= 3.0 && < 5,
                    directory  >= 1.0 && < 2,
                    filepath,
                    process    >= 1.0 && < 2,
                    HaXml      == 1.25.*

source-repository head
  type: git
  location: https://github.com/netrium/Netrium
